--- a/lib/styles/react-tooltipper.scss
+++ b/lib/styles/react-tooltipper.scss
@@ -1,4 +1,4 @@
-$tooltipper-color: #f04 !default;
+$tooltipper-color: #f8694d !default;
 $tooltipper-zindex: 1500 !default;
 $tooltipper-overlay-color: rgba(#000, 0.5) !default;
 
@@ -10,25 +10,18 @@ $tooltipper-hole-shadow: 0 0 15px rgba(#000, 0.5) !default;
 
 $tooltipper-tooltip-arrow-size: 36px !default;
 $tooltipper-tooltip-bg-color: #fff !default;
-$tooltipper-tooltip-border-radius: 8px !default;
-$tooltipper-tooltip-color: #555 !default;
-$tooltipper-tooltip-font-size: 16px !default;
-$tooltipper-tooltip-padding: 20px !default;
+$tooltipper-tooltip-border-radius: 10px !default;
+$tooltipper-tooltip-color: #333 !default;
+$tooltipper-tooltip-font-size: 13px !default;
+$tooltipper-tooltip-padding: 15px !default;
 $tooltipper-tooltip-shadow: drop-shadow(2px 4px 4px rgba(#000, 0.3)) !default;
 $tooltipper-tooltip-width: (290px, 360px, 450px) !default;
 
 $tooltipper-header-color: $tooltipper-tooltip-color !default;
-$tooltipper-header-font-size: 20px !default;
+$tooltipper-header-font-size: 13px !default;
+$tooltipper-header-font-weight: 500;
 $tooltipper-header-border-color: $tooltipper-color !default;
 $tooltipper-header-border-width: 1px !default;
-
-$tooltipper-button-bg-color: $tooltipper-color !default;
-$tooltipper-button-color: #fff !default;
-$tooltipper-button-radius: 4px !default;
-
-$tooltipper-back-button-color: $tooltipper-color !default;
-
-$tooltipper-skip-button-color: #ccc !default;
 
 $tooltipper-tooltip-arrow-height: $tooltipper-tooltip-arrow-size / 2;
 $tooltipper-tooltip-arrow-scale: ($tooltipper-tooltip-arrow-size / ($tooltipper-tooltip-arrow-size * 0 + 1)) / 16;
@@ -37,8 +30,11 @@ $tooltipper-tooltip-arrow-scale: ($tooltipper-tooltip-arrow-size / ($tooltipper-
   $height: $tooltipper-tooltip-arrow-height;
   $width: $tooltipper-tooltip-arrow-size;
   $rotate: '0';
+  $arrow-color: $tooltipper-color;
 
-  @if $location == bottom {
+  @if $location == top {
+    $arrow-color: $tooltipper-tooltip-bg-color;
+  }@else if $location == bottom {
     $rotate: '180 8 4';
   } @else if $location == left {
     $height: $tooltipper-tooltip-arrow-size;
@@ -50,7 +46,7 @@ $tooltipper-tooltip-arrow-scale: ($tooltipper-tooltip-arrow-size / ($tooltipper-
     $rotate: '90 4 4';
   }
 
-  @return "data:image/svg+xml,%3Csvg%20width%3D%22#{$width}%22%20height%3D%22#{$height}%22%20version%3D%221.1%22%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%3E%3Cpolygon%20points%3D%220%2C%200%208%2C%208%2016%2C0%22%20fill%3D%22#{$tooltipper-tooltip-bg-color}%22%20transform%3D%22scale%28#{$tooltipper-tooltip-arrow-scale}%29%20rotate%28#{$rotate}%29%22%3E%3C%2Fpolygon%3E%3C%2Fsvg%3E";
+  @return "data:image/svg+xml,%3Csvg%20width%3D%22#{$width}%22%20height%3D%22#{$height}%22%20version%3D%221.1%22%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%3E%3Cpolygon%20points%3D%220%2C%200%208%2C%208%2016%2C0%22%20fill%3D%22#{$arrow-color}%22%20transform%3D%22scale%28#{$tooltipper-tooltip-arrow-scale}%29%20rotate%28#{$rotate}%29%22%3E%3C%2Fpolygon%3E%3C%2Fsvg%3E";
 }
 
 .tooltipper {
@@ -63,6 +59,7 @@ $tooltipper-tooltip-arrow-scale: ($tooltipper-tooltip-arrow-size / ($tooltipper-
     z-index: $tooltipper-zindex;
 
     .inner {
+      -webkit-animation: tooltipper-beacon-inner 1.2s infinite ease-in-out;
       animation: tooltipper-beacon-inner 1.2s infinite ease-in-out;
       background-color: $tooltipper-beacon-color;
       border-radius: 50%;
@@ -72,11 +69,14 @@ $tooltipper-tooltip-arrow-scale: ($tooltipper-tooltip-arrow-size / ($tooltipper-
       opacity: 0.7;
       position: relative;
       top: 50%;
+      -webkit-transform: translate(-50%, -50%);
+      -ms-transform: translate(-50%, -50%);
       transform: translate(-50%, -50%);
       width: 50%;
     }
 
     .outer {
+      -webkit-animation: tooltipper-beacon-outer 1.2s infinite ease-in-out;
       animation: tooltipper-beacon-outer 1.2s infinite ease-in-out;
       background-color: rgba($tooltipper-beacon-color, 0.2);
       border: ($tooltipper-beacon-size / 18) solid $tooltipper-beacon-color;
@@ -87,7 +87,11 @@ $tooltipper-tooltip-arrow-scale: ($tooltipper-tooltip-arrow-size / ($tooltipper-
       opacity: 0.9;
       position: absolute;
       top: 0;
+      -webkit-transform: translateY(-50%);
+      -ms-transform: translateY(-50%);
       transform: translateY(-50%);
+      -webkit-transform-origin: center;
+      -ms-transform-origin: center;
       transform-origin: center;
       width: 100%;
     }
@@ -118,9 +122,10 @@ $tooltipper-tooltip-arrow-scale: ($tooltipper-tooltip-arrow-size / ($tooltipper-
     border-radius: $tooltipper-tooltip-border-radius;
     color: $tooltipper-tooltip-color;
     cursor: default;
+    -webkit-filter: $tooltipper-tooltip-shadow;
     filter: $tooltipper-tooltip-shadow;
     opacity: 0;
-    padding: $tooltipper-tooltip-padding;
+    -webkit-transform: translate3d(0, 0, 0);
     transform: translate3d(0, 0, 0);
     width: nth($tooltipper-tooltip-width, 1);
     z-index: $tooltipper-zindex + 10;
@@ -134,64 +139,42 @@ $tooltipper-tooltip-arrow-scale: ($tooltipper-tooltip-arrow-size / ($tooltipper-
     }
 
     &.animate {
+      -webkit-animation: tooltipper-tooltip 0.4s forwards;
       animation: tooltipper-tooltip 0.4s forwards;
+      -webkit-animation-timing-function: cubic-bezier(0, 1.05, 0.55, 1.18);
       animation-timing-function: cubic-bezier(0, 1.05, 0.55, 1.18);
     }
 
     header {
-      border-bottom: $tooltipper-header-border-width solid $tooltipper-header-border-color;
+      background-color: $tooltipper-color;
+      border-radius: 10px 10px 0 0;
       margin-bottom: 12px;
-      padding-bottom: 6px;
+      padding: 12px;
       position: relative;
 
       h4 {
-        color: $tooltipper-header-color;
+        color: $tooltipper-tooltip-bg-color;
         font-size: $tooltipper-header-font-size;
+        font-weight: $tooltipper-header-font-weight;
         margin: 0;
       }
 
       a {
-        color: $tooltipper-tooltip-color;
-        font-size: 2.5rem;
-        line-height: 0.7;
+        color: $tooltipper-tooltip-bg-color;
+        font-size: 1.3rem;
+        line-height: 0.5;
         position: absolute;
-        right: 0;
+        right: 20px;
         text-decoration: none;
-        top: 0;
+        top: 12px;
       }
     }
 
     main {
       font-size: $tooltipper-tooltip-font-size;
+      line-height: 1.3;
       margin-bottom: 18px;
-    }
-
-    footer {
-      text-align: right;
-
-      .primary {
-        background-color: $tooltipper-button-bg-color;
-        border-radius: $tooltipper-button-radius;
-        color: $tooltipper-button-color;
-        padding: 6px 12px;
-        text-decoration: none;
-        transition: background-color 0.2s ease-in-out;
-
-        &:hover {
-          background-color: lighten($tooltipper-button-bg-color, 6);
-        }
-      }
-
-      .secondary {
-        color: $tooltipper-back-button-color;
-        margin-right: 10px;
-      }
-
-      .skip {
-        color: $tooltipper-skip-button-color;
-        float: left;
-        margin-right: 10px;
-      }
+      padding: 0 15px;
     }
 
     .triangle {
@@ -228,9 +211,18 @@ $tooltipper-tooltip-arrow-scale: ($tooltipper-tooltip-arrow-size / ($tooltipper-
       }
     }
 
+    &.top-left {
+      border-radius: 10px 10px 0 10px;
+    }
+    &.top-right {
+      border-radius: 10px 10px 10px 0;
+    }
+
     &.bottom,
     &.top {
       .triangle {
+        -webkit-transform: translateX(-50%);
+        -ms-transform: translateX(-50%);
         transform: translateX(-50%);
       }
     }
@@ -267,8 +259,15 @@ $tooltipper-tooltip-arrow-scale: ($tooltipper-tooltip-arrow-size / ($tooltipper-
       .triangle {
         background-image: url(tooltipper-arrow(left));
         height: $tooltipper-tooltip-arrow-size;
-        right: -($tooltipper-tooltip-arrow-height - 2);
+        right: -($tooltipper-tooltip-arrow-height);
         width: $tooltipper-tooltip-arrow-height;
+      }
+    }
+
+    &.left,
+    &.bottom-left {
+      header {
+        border-radius: 10px 0 0 0;
       }
     }
 
@@ -278,21 +277,53 @@ $tooltipper-tooltip-arrow-scale: ($tooltipper-tooltip-arrow-size / ($tooltipper-
       .triangle {
         background-image: url(tooltipper-arrow(right));
         height: $tooltipper-tooltip-arrow-size;
-        left: -($tooltipper-tooltip-arrow-height - 2);
+        left: -($tooltipper-tooltip-arrow-height);
         width: $tooltipper-tooltip-arrow-height;
+      }
+    }
+
+    &.right,
+    &.bottom-right {
+      header {
+        border-radius: 0 10px 0 0;
       }
     }
   }
 }
 
-@keyframes tooltipper-tooltip {
+@-webkit-keyframes tooltipper-tooltip {
   0% {
+    webkit-transform: scale(0.1);
     transform: scale(0.1);
   }
 
   100% {
     opacity: 1;
+    webkit-transform: perspective(1px) scale(1);
     transform: perspective(1px) scale(1);
+  }
+}
+
+@keyframes tooltipper-tooltip {
+  0% {
+    webkit-transform: scale(0.1);
+    transform: scale(0.1);
+  }
+
+  100% {
+    opacity: 1;
+    webkit-transform: perspective(1px) scale(1);
+    transform: perspective(1px) scale(1);
+  }
+}
+
+@-webkit-keyframes tooltipper-beacon-inner {
+  20% {
+    opacity: 0.9;
+  }
+
+  90% {
+    opacity: 0.7;
   }
 }
 
@@ -306,18 +337,40 @@ $tooltipper-tooltip-arrow-scale: ($tooltipper-tooltip-arrow-size / ($tooltipper-
   }
 }
 
-@keyframes tooltipper-beacon-outer {
+@-webkit-keyframes tooltipper-beacon-outer {
   0% {
+    -webkit-transform: scale(1);
     transform: scale(1);
   }
 
   45% {
     opacity: 0.7;
+    -webkit-transform: scale(0.75);
     transform: scale(0.75);
   }
 
   100% {
     opacity: 0.9;
+    -webkit-transform: scale(1);
+    transform: scale(1);
+  }
+}
+
+@keyframes tooltipper-beacon-outer {
+  0% {
+    -webkit-transform: scale(1);
+    transform: scale(1);
+  }
+
+  45% {
+    opacity: 0.7;
+    -webkit-transform: scale(0.75);
+    transform: scale(0.75);
+  }
+
+  100% {
+    opacity: 0.9;
+    -webkit-transform: scale(1);
     transform: scale(1);
   }
 }
