--- a/lib/styles/react-tooltipper.scss
+++ b/lib/styles/react-tooltipper.scss
@@ -26,6 +26,8 @@ $tooltipper-header-border-width: 1px !default;
 $tooltipper-tooltip-arrow-height: $tooltipper-tooltip-arrow-size / 2;
 $tooltipper-tooltip-arrow-scale: ($tooltipper-tooltip-arrow-size / ($tooltipper-tooltip-arrow-size * 0 + 1)) / 16;
 
+$tooltipper-subtle-border: 1px solid #ddd;
+
 @function tooltipper-arrow($location: top) {
   $height: $tooltipper-tooltip-arrow-height;
   $width: $tooltipper-tooltip-arrow-size;
@@ -119,6 +121,7 @@ $tooltipper-tooltip-arrow-scale: ($tooltipper-tooltip-arrow-size / ($tooltipper-
 
   &-tooltip {
     background-color: $tooltipper-tooltip-bg-color;
+    border-bottom: $tooltipper-subtle-border;
     border-radius: $tooltipper-tooltip-border-radius;
     color: $tooltipper-tooltip-color;
     cursor: default;
@@ -148,7 +151,6 @@ $tooltipper-tooltip-arrow-scale: ($tooltipper-tooltip-arrow-size / ($tooltipper-
     header {
       background-color: $tooltipper-color;
       border-radius: 10px 10px 0 0;
-      margin-bottom: 12px;
       padding: 12px;
       position: relative;
 
@@ -171,10 +173,12 @@ $tooltipper-tooltip-arrow-scale: ($tooltipper-tooltip-arrow-size / ($tooltipper-
     }
 
     main {
+      border-left: $tooltipper-subtle-border;
+      border-right: $tooltipper-subtle-border;
+      border-radius: 0 0 10px 10px;
       font-size: $tooltipper-tooltip-font-size;
       line-height: 1.3;
-      margin-bottom: 18px;
-      padding: 0 15px;
+      padding: 12px 15px 18px 15px;
     }
 
     .triangle {
